Revert switch to LabKeyProcessBuilder